# CMakeSampleProject

./: README.md
header_only_dependencies/: CMakeLists.txt
header_only_dependencies/header_only_lib/: CMakeLists.txt  header.hpp
header_only_dependencies/src/: CMakeLists.txt  main.cc
other/project_with_dependencies_based_on_yoda/project_a/: CMakeLists.txt
other/project_with_dependencies_based_on_yoda/project_a/cmake/: ProjectAConfig.cmake.in  initializeYoda.cmake
other/project_with_dependencies_based_on_yoda/project_a/src/public/: project_a_public.cpp
other/project_with_dependencies_based_on_yoda/project_a_header_only/: CMakeLists.txt
other/project_with_dependencies_based_on_yoda/project_a_header_only/include/project_a_header_only/: project_a_header_only.h
other/project_with_dependencies_based_on_yoda/project_b/: CMakeLists.txt
other/project_with_dependencies_based_on_yoda/project_b/cmake/: ProjectBConfig.cmake.in
other/project_with_dependency_on_cudart/: CMakeLists.txt  my_cpp_file_using_cudart.cpp
project_a/: CMakeLists.txt
project_a/src/private/: project_a_private.h
project_a_header_only/cmake/: ProjectAHeaderOnlyConfig.cmake.in
project_b/: CMakeLists.txt
project_b/cmake/: ProjectBConfig.cmake.in
project_b/include/project_b/: project_b.h
project_b/src/: project_b.cpp
project_c/src/: main.cpp
project_dependencies_plain/project_a/src/private/: project_a_private.cpp
project_dependencies_plain/project_b/: CMakeLists.txt
project_with_dependencies/project_a/include/project_a/public/: project_a_public.h
project_with_dependencies/project_c/: CMakeLists.txt
